Fixed toolbar visibility
Added greater z-index for the toolbar, only when it's toggled.

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -14,8 +14,12 @@
 * General settings
 ******************/
 body.maxi-blocks--active .interface-interface-skeleton__body {
-	z-index: 999;
+	z-index: 99;
 }
+body.maxi-blocks--active .interface-interface-skeleton__header.true {
+	z-index: 100;
+}
+
 .interface-interface-skeleton__sidebar {
 	overflow-x: hidden;
 	scrollbar-gutter: stable;
